Fix channels bar footer not visible

--- a/twake/frontend/src/app/scenes/Client/ChannelsBar/ChannelsBar.scss
+++ b/twake/frontend/src/app/scenes/Client/ChannelsBar/ChannelsBar.scss
@@ -10,8 +10,11 @@
   background: $grey_background;
   width: 220px;
   padding-top: 16px;
-  display: flex;
-  flex-direction: column;
+
+  & > div {
+    display: flex;
+    flex-direction: column;
+  }
 
   .channel_small_text {
     font-size: 12px;
